Finished the notebook, added image

--- a/Lecture_notebook.ipynb
+++ b/Lecture_notebook.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = 'chinotest-724'"
+    "username = 'username'"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The resources for this lab are S3 buckets we will refer to as bucket 1 through 5.\n",
+    "In this lab, there are S3 buckets we will refer to as bucket 1 through 5. Buckets 1, 2 and 4 are in the same accounts as the roles, and 3 and 5 are in a different account.\n",
     "All roles shown below will have similar permissions policies which allows them to access generic S3 resources, and we'll be showing those along the way."
    ]
   },
@@ -119,41 +119,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These include an IAM user that can assume the necessary roles to perform all the actions, and the buckets we'll be accessing. But how are we going to do that? Well, we've written a function for this. It's in a script called aws_run_as.sh, and we'll run it as necessary. But first, we need to set up our credentials. To do this, simply run the next cell and everything will be set up for you."
+    "These include an IAM user that can assume the necessary roles to perform all the actions, and the buckets we'll be accessing. But how are we going to do that? Well, we've written a function for this. It's in a script called aws_run_as.sh, and we'll run it as necessary. But first, we need to set up our credentials. To do this, simply run the next cell and everything will be set up for you. Remember, Shift+Enter / Shift+Return to run cells."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "!aws configure set aws_access_key_id  AKIAUKREGRAZBR4ZRMHB --profile lab2\n",
-    "!aws configure set aws_secret_access_key 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 --profile lab2\n",
+    "!aws configure set aws_access_key_id  $AWS_KEY --profile lab2\n",
+    "!aws configure set aws_secret_access_key $AWS_SECRET_KEY --profile lab2\n",
     "!aws configure set region us-east-1\n",
     "!aws configure set output json\n",
     "!chmod a+x aws_run_as.sh\n",
     "roleA = username+'-role-A'\n",
     "roleB = username+'-role-B'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-724\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!echo ${username}"
    ]
   },
   {
@@ -180,23 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\r\n",
-      "    \"UserId\": \"AROAUKREGRAZNQPETU4HJ:chinotest-724-role-A\",\r\n",
-      "    \"Account\": \"297502410802\",\r\n",
-      "    \"Arn\": \"arn:aws:sts::297502410802:assumed-role/chinotest-724-role-A/chinotest-724-role-A\"\r\n",
-      "}\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!./aws_run_as.sh --profile lab2 $roleA sts get-caller-identity"
    ]
@@ -207,13 +178,6 @@
    "source": [
     "This should return an assumed role with the name username-role-A, the account it's in, and its ARN. If it doesn't, check your username was spelled correctly."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -285,20 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r\n",
-      "An error occurred (AccessDenied) when calling the ListObjectsV2 operation: Access Denied\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-1"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_ONE"
    ]
   },
   {
@@ -312,19 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-11-30 22:35:28         52 bucket1_success.txt\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-1"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$BUCKET_ONE"
    ]
   },
   {
@@ -383,19 +330,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-11-30 22:35:30         52 bucket2_success.txt\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-2"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_TWO"
    ]
   },
   {
@@ -465,37 +404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-11-30 22:35:36         52 bucket3_success.txt\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-3"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_THREE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r\n",
-      "An error occurred (AccessDenied) when calling the ListObjectsV2 operation: Access Denied\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-3"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$BUCKET_THREE"
    ]
   },
   {
@@ -576,37 +498,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r\n",
-      "An error occurred (AccessDenied) when calling the ListObjectsV2 operation: Access Denied\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-4"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$BUCKET_FOUR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-11-30 22:35:32         52 bucket4_success.txt\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-4"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_FOUR"
    ]
   },
   {
@@ -640,13 +545,17 @@
     "\n",
     "Notice that we haven't talked about bucket5? Well, that's because bucket5 is an optional challenge you can try to solve (if you feel you can, that's it).\n",
     "\n",
-    "For this challenge you'll need to know two things:\n",
+    "For this challenge you'll need to know three things:\n",
     "\n",
-    "* The bucket's permissions have been \"split up\"\n",
+    "* The bucket's name is correlated to your username\n",
+    "\n",
+    "* The bucket's permissions are divorced\n",
     "\n",
     "* In order to download an item from a bucket, you do something like the following, where you specify what you want to download (using the cp command) and the name you want to give it after it downloads\n",
     "\n",
-    "```!./aws_run_as.sh --profile lab2 $roleA s3 cp s3://${username}-bucket-4/example.txt example.txt```\n"
+    "```!./aws_run_as.sh --profile lab2 $roleA s3 cp s3://exampleusername-bucket-4/example.txt example.txt```\n",
+    "\n",
+    "Use the cells below to write the necessary commands. If you need to, you can add more cells by pressing A or B on your keyboard when the selected cell is blue."
    ]
   },
   {
