Fixed a problem with env variables in the notebook

--- a/Lecture_notebook.ipynb
+++ b/Lecture_notebook.ipynb
@@ -135,6 +135,10 @@
     "!aws configure set region us-east-1\n",
     "!aws configure set output json\n",
     "!chmod a+x aws_run_as.sh\n",
+    "bucket1 = !echo ${BUCKET_ONE}\n",
+    "bucket2 = !echo ${BUCKET_TWO}\n",
+    "bucket3 = !echo ${BUCKET_THREE}\n",
+    "bucket4 = !echo ${BUCKET_FOUR}\n",
     "roleA = username+'-role-A'\n",
     "roleB = username+'-role-B'"
    ]
@@ -249,11 +253,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The config profile (lab2) could not be found\n",
+      "\n",
+      "The config profile (lab2) could not be found\n",
+      "usage: aws [options] <command> <subcommand> [<subcommand> ...] [parameters]\n",
+      "To see help text, you can run:\n",
+      "\n",
+      "  aws help\n",
+      "  aws <command> help\n",
+      "  aws <command> <subcommand> help\n",
+      "aws: error: argument command: Invalid choice, valid choices are:\n",
+      "\n",
+      "accessanalyzer                           | acm                                     \n",
+      "acm-pca                                  | alexaforbusiness                        \n",
+      "amplify                                  | apigateway                              \n",
+      "apigatewaymanagementapi                  | apigatewayv2                            \n",
+      "appconfig                                | application-autoscaling                 \n",
+      "application-insights                     | appmesh                                 \n",
+      "appstream                                | appsync                                 \n",
+      "athena                                   | autoscaling                             \n",
+      "autoscaling-plans                        | backup                                  \n",
+      "batch                                    | budgets                                 \n",
+      "ce                                       | chime                                   \n",
+      "cloud9                                   | clouddirectory                          \n",
+      "cloudformation                           | cloudfront                              \n",
+      "cloudhsm                                 | cloudhsmv2                              \n",
+      "cloudsearch                              | cloudsearchdomain                       \n",
+      "cloudtrail                               | cloudwatch                              \n",
+      "codebuild                                | codecommit                              \n",
+      "codeguru-reviewer                        | codeguruprofiler                        \n",
+      "codepipeline                             | codestar                                \n",
+      "codestar-connections                     | codestar-notifications                  \n",
+      "cognito-identity                         | cognito-idp                             \n",
+      "cognito-sync                             | comprehend                              \n",
+      "comprehendmedical                        | compute-optimizer                       \n",
+      "connect                                  | connectparticipant                      \n",
+      "cur                                      | dataexchange                            \n",
+      "datapipeline                             | datasync                                \n",
+      "dax                                      | detective                               \n",
+      "devicefarm                               | directconnect                           \n",
+      "discovery                                | dlm                                     \n",
+      "dms                                      | docdb                                   \n",
+      "ds                                       | dynamodb                                \n",
+      "dynamodbstreams                          | ebs                                     \n",
+      "ec2                                      | ec2-instance-connect                    \n",
+      "ecr                                      | ecs                                     \n",
+      "efs                                      | eks                                     \n",
+      "elastic-inference                        | elasticache                             \n",
+      "elasticbeanstalk                         | elastictranscoder                       \n",
+      "elb                                      | elbv2                                   \n",
+      "emr                                      | es                                      \n",
+      "events                                   | firehose                                \n",
+      "fms                                      | forecast                                \n",
+      "forecastquery                            | frauddetector                           \n",
+      "fsx                                      | gamelift                                \n",
+      "glacier                                  | globalaccelerator                       \n",
+      "glue                                     | greengrass                              \n",
+      "groundstation                            | guardduty                               \n",
+      "health                                   | iam                                     \n",
+      "imagebuilder                             | importexport                            \n",
+      "inspector                                | iot                                     \n",
+      "iot-data                                 | iot-jobs-data                           \n",
+      "iot1click-devices                        | iot1click-projects                      \n",
+      "iotanalytics                             | iotevents                               \n",
+      "iotevents-data                           | iotsecuretunneling                      \n",
+      "iotsitewise                              | iotthingsgraph                          \n",
+      "kafka                                    | kendra                                  \n",
+      "kinesis                                  | kinesis-video-archived-media            \n",
+      "kinesis-video-media                      | kinesis-video-signaling                 \n",
+      "kinesisanalytics                         | kinesisanalyticsv2                      \n",
+      "kinesisvideo                             | kms                                     \n",
+      "lakeformation                            | lambda                                  \n",
+      "lex-models                               | lex-runtime                             \n",
+      "license-manager                          | lightsail                               \n",
+      "logs                                     | machinelearning                         \n",
+      "macie                                    | macie2                                  \n",
+      "managedblockchain                        | marketplace-catalog                     \n",
+      "marketplace-entitlement                  | marketplacecommerceanalytics            \n",
+      "mediaconnect                             | mediaconvert                            \n",
+      "medialive                                | mediapackage                            \n",
+      "mediapackage-vod                         | mediastore                              \n",
+      "mediastore-data                          | mediatailor                             \n",
+      "meteringmarketplace                      | mgh                                     \n",
+      "migrationhub-config                      | mobile                                  \n",
+      "mq                                       | mturk                                   \n",
+      "neptune                                  | networkmanager                          \n",
+      "opsworks                                 | opsworkscm                              \n",
+      "organizations                            | outposts                                \n",
+      "personalize                              | personalize-events                      \n",
+      "personalize-runtime                      | pi                                      \n",
+      "pinpoint                                 | pinpoint-email                          \n",
+      "pinpoint-sms-voice                       | polly                                   \n",
+      "pricing                                  | qldb                                    \n",
+      "qldb-session                             | quicksight                              \n",
+      "ram                                      | rds                                     \n",
+      "rds-data                                 | redshift                                \n",
+      "rekognition                              | resource-groups                         \n",
+      "resourcegroupstaggingapi                 | robomaker                               \n",
+      "route53                                  | route53domains                          \n",
+      "route53resolver                          | s3control                               \n",
+      "sagemaker                                | sagemaker-a2i-runtime                   \n",
+      "sagemaker-runtime                        | savingsplans                            \n",
+      "schemas                                  | sdb                                     \n",
+      "secretsmanager                           | securityhub                             \n",
+      "serverlessrepo                           | service-quotas                          \n",
+      "servicecatalog                           | servicediscovery                        \n",
+      "ses                                      | sesv2                                   \n",
+      "shield                                   | signer                                  \n",
+      "sms                                      | sms-voice                               \n",
+      "snowball                                 | sns                                     \n",
+      "sqs                                      | ssm                                     \n",
+      "sso                                      | sso-oidc                                \n",
+      "stepfunctions                            | storagegateway                          \n",
+      "sts                                      | support                                 \n",
+      "swf                                      | synthetics                              \n",
+      "textract                                 | transcribe                              \n",
+      "transfer                                 | translate                               \n",
+      "waf                                      | waf-regional                            \n",
+      "wafv2                                    | workdocs                                \n",
+      "worklink                                 | workmail                                \n",
+      "workmailmessageflow                      | workspaces                              \n",
+      "xray                                     | s3api                                   \n",
+      "s3                                       | configure                               \n",
+      "deploy                                   | configservice                           \n",
+      "opsworks-cm                              | runtime.sagemaker                       \n",
+      "history                                  | help                                    \n"
+     ]
+    }
+   ],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_ONE"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$bucket1"
    ]
   },
   {
@@ -271,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$BUCKET_ONE"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$bucket1"
    ]
   },
   {
@@ -334,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_TWO"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$bucket2"
    ]
   },
   {
@@ -408,7 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_THREE"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$bucket3"
    ]
   },
   {
@@ -417,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$BUCKET_THREE"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$bucket3"
    ]
   },
   {
@@ -502,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$BUCKET_FOUR"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$bucket4"
    ]
   },
   {
@@ -511,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$BUCKET_FOUR"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$bucket4"
    ]
   },
   {
