--- a/Lecture_notebook.ipynb
+++ b/Lecture_notebook.ipynb
@@ -1,18 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hello! Welcome to UT's AWS Lab!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Please input your username (the one used for login) in the next cell. Then, run it with Shift+Enter (Shift+Return)."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -24,11 +17,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Cross-Account vs Intra-Account Rules, and What is Root?"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -130,15 +123,11 @@
    },
    "outputs": [],
    "source": [
-    "!aws configure set aws_access_key_id  $AWS_KEY --profile lab2\n",
-    "!aws configure set aws_secret_access_key $AWS_SECRET_KEY --profile lab2\n",
+    "!aws configure set aws_access_key_id  ${username}_AWS_KEY --profile lab2\n",
+    "!aws configure set aws_secret_access_key ${username}_AWS_SECRET_KEY --profile lab2\n",
     "!aws configure set region us-east-1\n",
     "!aws configure set output json\n",
     "!chmod a+x aws_run_as.sh\n",
-    "bucket1 = !echo ${BUCKET_ONE}\n",
-    "bucket2 = !echo ${BUCKET_TWO}\n",
-    "bucket3 = !echo ${BUCKET_THREE}\n",
-    "bucket4 = !echo ${BUCKET_FOUR}\n",
     "roleA = username+'-role-A'\n",
     "roleB = username+'-role-B'"
    ]
@@ -275,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://{bucket1.s}"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-1"
    ]
   },
   {
@@ -338,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://{bucket2.s}"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-"
    ]
   },
   {
@@ -412,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://{bucket3.s}"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-3"
    ]
   },
   {
@@ -421,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://{bucket3.s}"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-"
    ]
   },
   {
@@ -506,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://{bucket4.s}"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-"
    ]
   },
   {
@@ -515,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://{bucket4.s}"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-"
    ]
   },
   {
@@ -586,9 +575,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "0600588c3b5f4418cbe7b5ebc6825b479f3bc010269d8b60d75058cdd010adfe"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -600,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.0-final"
   }
  },
  "nbformat": 4,
