--- a/Lecture_notebook.ipynb
+++ b/Lecture_notebook.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Please input your username (the one used for login) in the next cell. Then, run it with Shift+Enter (Shift+Return)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -13,15 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = 'username'"
+    "username = 'username goes here, leave the single quotes'"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Cross-Account vs Intra-Account Rules, and What is Root?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,8 +123,8 @@
    },
    "outputs": [],
    "source": [
-    "!aws configure set aws_access_key_id  ${username}_AWS_KEY --profile lab2\n",
-    "!aws configure set aws_secret_access_key ${username}_AWS_SECRET_KEY --profile lab2\n",
+    "!aws configure set aws_access_key_id  $AWS_KEY --profile lab2\n",
+    "!aws configure set aws_secret_access_key $AWS_SECRET_KEY --profile lab2\n",
     "!aws configure set region us-east-1\n",
     "!aws configure set output json\n",
     "!chmod a+x aws_run_as.sh\n",
@@ -542,7 +542,7 @@
     "\n",
     "* The bucket's name is correlated to your username\n",
     "\n",
-    "* The bucket's permissions are divorced\n",
+    "* The bucket's permissions are \"divorced\"\n",
     "\n",
     "* In order to download an item from a bucket, you do something like the following, where you specify what you want to download (using the cp command) and the name you want to give it after it downloads\n",
     "\n",
@@ -575,13 +575,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.0 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "0600588c3b5f4418cbe7b5ebc6825b479f3bc010269d8b60d75058cdd010adfe"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -593,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
