--- a/Lecture_notebook.ipynb
+++ b/Lecture_notebook.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = 'username goes here, leave the single quotes'"
+    "username = 'username goes here, leave the quote marks'"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://{bucket1.s}"
+    "!./aws_run_as.sh --profile lab2 $roleA  s3 ls s3://awslab2-bucket-1"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-1"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://awslab2-bucket-1"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://awslab2-bucket-2"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-3"
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://awslab2-bucket-3"
    ]
   },
   {
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://awslab2-bucket-3"
    ]
   },
   {
@@ -495,16 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://$username-bucket-"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://$username-bucket-"
+    "!./aws_run_as.sh --profile lab2 $roleB s3 ls s3://awslab-bucket-4"
    ]
   },
   {
@@ -513,6 +504,15 @@
    "source": [
     "### Conclusion\n",
     "If we need to, we can create a bucket policy that denies permission to all principals, except the one we want, which is good for scalability and security best practices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./aws_run_as.sh --profile lab2 $roleA s3 ls s3://awslab-bucket-4"
    ]
   },
   {
@@ -542,7 +542,7 @@
     "\n",
     "* The bucket's name is correlated to your username\n",
     "\n",
-    "* The bucket's permissions are \"divorced\"\n",
+    "* The bucket's permissions are divorced\n",
     "\n",
     "* In order to download an item from a bucket, you do something like the following, where you specify what you want to download (using the cp command) and the name you want to give it after it downloads\n",
     "\n",
@@ -589,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
